--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
 		</div>
 		<div class="col-md-10">
-			<h5 class="text-center">ABOUT &#8226; REVIEWED &#8226; COLOPHON </h5>
+			<h5 class="text-center"><a href="/about">ABOUT</a> &#8226; <a href="/review">REVIEWED</a> &#8226; <a href="/colophon">COLOPHON</a>  </h5>
 		</div>
 		<div class="col-md-1">
 
@@ -251,28 +251,26 @@
 	</div>
 </div>
 <hr>
-<div class="container">
-	<div class="row">
-		<div class="col-md-1">
 
-		</div>
-		<div class="col-md-10">
-			<p class="text-center"><small>Copyright &copy; 2015 CHW S.A. and Our Authors</small></p>
-		</div>
-		<div class="col-md-1">
-		</div>
-	</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-1">
+
+        </div>
+        <div class="col-md-10">
+            <h6 class="text-center">Copyright &copy; 2015 CHW S.A. and Our Authors</h6>
+        </div>
+        <div class="col-md-1">
+        </div>
+    </div>
 </div>
 
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+<script src="/js/bootstrap.min.js"></script>
 
 
-
-    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    
-    <script src="js/bootstrap.min.js"></script>
-
-
-  </body>
+</body>
 </html>
+
